chore(QTDI-2894): fix possible api break